force-app/main/default/objects/Account/fields/Credit_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Credit_Utilized__c</fullName>
    <label>Credit Utilized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>