force-app/main/default/objects/Account/fields/Drug_License_No__c.field-meta.xml
<CustomField>
    <fullName>Drug_License_No__c</fullName>
    <label>Drug License No</label>
    <type>Text</type>
    <length>30</length>
</CustomField>