force-app/main/default/objects/Account/fields/FSSAI_License_No__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_License_No__c</fullName>
    <label>FSSAI License No</label>
    <description>Food Safety and Standards Authority of India license number for FMCG compliance</description>
    <type>Text</type>
    <length>20</length>
</CustomField>