force-app/main/default/objects/Account/fields/Geofence_Radius__c.field-meta.xml
<CustomField>
    <fullName>Geofence_Radius__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Geofence Radius</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>