force-app/main/default/objects/Account/fields/Last_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Value__c</fullName>
    <label>Last Order Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>