force-app/main/default/objects/Account/fields/Outlet_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Latitude__c</fullName>
    <label>Outlet Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>