force-app/main/default/objects/Account/fields/Outlet_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Longitude__c</fullName>
    <label>Outlet Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>