force-app/main/default/objects/Account/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <label>Proprietor / Contact Name</label>
    <description>Name of the shop owner or primary contact person at the outlet</description>
    <type>Text</type>
    <length>255</length>
</CustomField>