force-app/main/default/objects/Account/recordTypes/Modern_Trade.recordType-meta.xml
<RecordType>
    <fullName>Modern_Trade</fullName>
    <active>true</active>
    <label>Modern Trade</label>
    <description>Modern Trade key account record type</description>
</RecordType>