force-app/main/default/objects/Account/recordTypes/Super_Stockist.recordType-meta.xml
<RecordType>
    <fullName>Super_Stockist</fullName>
    <active>true</active>
    <label>Super Stockist</label>
    <description>Super Stockist / C&amp;F Agent record type</description>
</RecordType>