force-app/main/default/objects/Account/validationRules/Credit_Limit_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Limit_Non_Negative</fullName>
    <active>true</active>
    <description>Ensures Credit Limit cannot be negative</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Credit_Limit__c)),
    Credit_Limit__c &lt; 0
)</errorConditionFormula>
    <errorDisplayField>Credit_Limit__c</errorDisplayField>
    <errorMessage>Credit Limit cannot be negative. Please enter a value of 0 or greater.</errorMessage>
</ValidationRule>