force-app/main/default/objects/Account/validationRules/GSTIN_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN_Format_Validation</fullName>
    <active>true</active>
    <description>Validates GSTIN format: 2-digit state code + 10-char PAN + 1 entity code + Z + 1 check digit. Example: 27AABCU9603R1ZM</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(GSTIN__c)),
    NOT(REGEX(GSTIN__c, "[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}"))
)</errorConditionFormula>
    <errorDisplayField>GSTIN__c</errorDisplayField>
    <errorMessage>Invalid GSTIN format. Expected format: 2 digits + 5 letters + 4 digits + 1 letter + 1 alphanumeric + Z + 1 alphanumeric (e.g., 27AABCU9603R1ZM)</errorMessage>
</ValidationRule>