force-app/main/default/objects/Account/validationRules/Outlet_Type_Required_For_Retailer.validationRule-meta.xml
<ValidationRule>
    <fullName>Outlet_Type_Required_For_Retailer</fullName>
    <active>true</active>
    <description>Outlet Type is mandatory for Retailer record type accounts</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = "Retailer",
    ISPICKVAL(Outlet_Type__c, "")
)</errorConditionFormula>
    <errorDisplayField>Outlet_Type__c</errorDisplayField>
    <errorMessage>Outlet Type is required for Retailer accounts. Please select an outlet type.</errorMessage>
</ValidationRule>