force-app/main/default/objects/Account/validationRules/PAN_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Format_Validation</fullName>
    <active>true</active>
    <description>Validates PAN format: 5 uppercase letters + 4 digits + 1 uppercase letter. Example: ABCDE1234F</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PAN__c)),
    NOT(REGEX(PAN__c, "[A-Z]{5}[0-9]{4}[A-Z]{1}"))
)</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>Invalid PAN format. Expected format: 5 letters + 4 digits + 1 letter (e.g., ABCDE1234F)</errorMessage>
</ValidationRule>