force-app/main/default/objects/Account/listViews/Accounts_Missing_Geolocation.listView-meta.xml
<ListView>
    <fullName>Accounts_Missing_Geolocation</fullName>
    <label>Missing Geolocation</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Account.Outlet_Latitude__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Outlet_Type__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>Account.Beat__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Account.Outlet_Latitude__c</columns>
    <columns>Account.Outlet_Longitude__c</columns>
    <columns>Account.Geofence_Radius__c</columns>
</ListView>