force-app/main/default/objects/Account/listViews/All_Modern_Trade.listView-meta.xml
<ListView>
    <fullName>All_Modern_Trade</fullName>
    <label>All Modern Trade</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Modern_Trade</value>
    </filters>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>Account.Channel__c</columns>
    <columns>Account.Outlet_Class__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>ACCOUNT.SALES</columns>
    <columns>Account.Credit_Limit__c</columns>
    <columns>Account.Outstanding_Balance__c</columns>
    <columns>Account.Last_Order_Date__c</columns>
    <columns>Account.Last_Visit_Date__c</columns>
</ListView>