force-app/main/default/objects/Account/listViews/All_Retailers.listView-meta.xml
<ListView>
    <fullName>All_Retailers</fullName>
    <label>All Retailers</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Retailer</value>
    </filters>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Is_Active__c</columns>
    <columns>Account.Outlet_Type__c</columns>
    <columns>Account.Outlet_Class__c</columns>
    <columns>Account.Channel__c</columns>
    <columns>Account.Beat__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>Account.Visit_Frequency__c</columns>
    <columns>Account.Last_Visit_Date__c</columns>
    <columns>Account.Last_Order_Date__c</columns>
    <columns>Account.Outstanding_Balance__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
</ListView>