force-app/main/default/objects/Account/listViews/All_Super_Stockists.listView-meta.xml
<ListView>
    <fullName>All_Super_Stockists</fullName>
    <label>All Super Stockists</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Super_Stockist</value>
    </filters>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Account.Channel__c</columns>
    <columns>Account.Outlet_Class__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>Account.GSTIN__c</columns>
    <columns>Account.Credit_Limit__c</columns>
    <columns>Account.Outstanding_Balance__c</columns>
    <columns>Account.Last_Order_Date__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
</ListView>