force-app/main/default/objects/Account/listViews/My_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Accounts</fullName>
    <label>My Accounts</label>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Channel__c</columns>
    <columns>Account.Outlet_Type__c</columns>
    <columns>Account.Outlet_Class__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>Account.Beat__c</columns>
    <columns>Account.Credit_Limit__c</columns>
    <columns>Account.Outstanding_Balance__c</columns>
    <columns>Account.Last_Visit_Date__c</columns>
    <columns>Account.Last_Order_Date__c</columns>
</ListView>