force-app/main/default/objects/Account/listViews/Outstanding_Accounts.listView-meta.xml
<ListView>
    <fullName>Outstanding_Accounts</fullName>
    <label>Accounts with Outstanding Balance</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Outstanding_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Account.Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account.Is_Active__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Account.Channel__c</columns>
    <columns>Account.Territory__c</columns>
    <columns>Account.Credit_Limit__c</columns>
    <columns>Account.Credit_Utilized__c</columns>
    <columns>Account.Outstanding_Balance__c</columns>
    <columns>Account.Last_Order_Date__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
</ListView>